--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,7 @@ python_requires = >= 3.8
 include_package_data = true
 install_requires =
   Django>=2.2
+  paper-admin>=4.1
 packages = find:
 
 [isort]
