--- a/tox.ini
+++ b/tox.ini
@@ -20,5 +20,8 @@ deps =
   django40: Django==4.0.*
   -r{toxinidir}/requirements.txt
 
+extras =
+  orjson
+
 commands =
   pytest --basetemp="{envtmpdir}" {posargs}
