--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
 envlist =
-  py{38,39,310}-django{22,30,31,32,40}
+  py{38,39}-django{22,30,31,32,40,41}
+  py{310}-django{32,40,41}
 
 [testenv]
 usedevelop = true
@@ -13,11 +14,12 @@ install_command =
 
 deps =
   setuptools
-  django22: Django==2.2.*
-  django30: Django==3.0.*
-  django31: Django==3.1.*
-  django32: Django==3.2.*
-  django40: Django==4.0.*
+  django22: Django<2.3
+  django30: Django<3.1
+  django31: Django<3.2
+  django32: Django<3.3
+  django40: Django<4.1
+  django41: Django<4.2
   -r{toxinidir}/requirements.txt
 
 extras =
