--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,8 @@ include LICENSE
 include README.md
 include CHANGELOG.md
 
+recursive-include streamfield *.html
+recursive-include streamfield/static/streamfield/dist *.svg *.css *.js *.map
 recursive-exclude tests *
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
