--- a/package.json
+++ b/package.json
@@ -10,10 +10,23 @@
   "author": "Mihail Mishakin",
   "license": "BSD license",
   "devDependencies": {
-    "@babel/core": "^7.18.10",
+    "@babel/core": "^7.18.13",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.18.10",
     "@babel/preset-env": "^7.18.10",
+    "autoprefixer": "^10.4.8",
     "babel-loader": "^8.2.5",
+    "css-minimizer-webpack-plugin": "^4.0.0",
+    "fast-async": "^6.3.8",
+    "fast-css-loader": "^1.0.2",
+    "fibers": "^5.0.3",
+    "mini-css-extract-plugin": "^2.6.1",
+    "pixrem": "^5.0.0",
+    "postcss": "^8.4.16",
+    "postcss-loader": "^7.0.1",
     "prettier": "^2.7.1",
+    "sass": "^1.54.6",
+    "sass-loader": "^13.0.2",
     "terser-webpack-plugin": "^5.3.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
