--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "sass": "^1.54.8",
     "sass-loader": "^13.0.2",
     "terser-webpack-plugin": "^5.3.6",
+    "uuid": "^9.0.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   }
