use jinja2-simple-tags

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,7 @@ include_package_data = true
 install_requires =
   Django>=2.2
   paper-admin>=4.3
+  jinja2-simple-tags
 packages = find:
 
 [isort]
