--- a/setup.cfg
+++ b/setup.cfg
@@ -16,8 +16,6 @@ classifiers =
   Development Status :: 3 - Alpha
   License :: OSI Approved :: BSD License
   Operating System :: OS Independent
-  Framework :: Django :: 2.2
-  Framework :: Django :: 3.0
   Framework :: Django :: 3.1
   Framework :: Django :: 3.2
   Framework :: Django :: 4.0
@@ -38,7 +36,7 @@ zip_safe = false
 python_requires = >= 3.8
 include_package_data = true
 install_requires =
-  Django>=2.2
+  Django
   paper-admin>=4.3
   jinja2-simple-tags
 packages = find:
