--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,9 +12,16 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '16'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip setuptools wheel twine
+      - name: Install NPM dependencies
+        run: npm ci
+      - name: Run webpack
+        run: npx webpack --mode=production
       - name: Build and publish
         env:
           TWINE_USERNAME: __token__
