--- a/setup.cfg
+++ b/setup.cfg
@@ -39,7 +39,12 @@ install_requires =
   Django
   paper-admin>=4.3
   jinja2-simple-tags
-packages = find:
+packages = find_namespace:
+
+[options.packages.find]
+exclude =
+  tests
+  tests.*
 
 [isort]
 multi_line_output = 3
