--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "Implementation of the Wagtail's StreamField block picker for paper-admin.",
   "main": "streamfield/static/streamfield/index.js",
+  "type": "module",
   "scripts": {
     "build": "webpack --mode production",
     "build:dev": "webpack --mode development"
@@ -10,25 +11,24 @@
   "author": "Mihail Mishakin",
   "license": "BSD license",
   "devDependencies": {
-    "@babel/core": "^7.20.5",
+    "@babel/core": "^7.21.4",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.19.6",
-    "@babel/preset-env": "^7.20.2",
-    "autoprefixer": "^10.4.13",
-    "babel-loader": "^9.1.0",
-    "css-minimizer-webpack-plugin": "^4.2.2",
-    "fast-async": "^6.3.8",
+    "@babel/preset-env": "^7.21.4",
+    "babel-loader": "^9.1.2",
+    "babel-plugin-transform-imports": "^2.0.0",
+    "css-minimizer-webpack-plugin": "^5.0.0",
     "fast-css-loader": "^1.0.2",
     "fibers": "^5.0.3",
-    "mini-css-extract-plugin": "^2.7.1",
-    "pixrem": "^5.0.0",
-    "postcss": "^8.4.19",
-    "postcss-loader": "^7.0.2",
-    "sass": "^1.56.1",
-    "sass-loader": "^13.2.0",
-    "terser-webpack-plugin": "^5.3.6",
+    "mini-css-extract-plugin": "^2.7.5",
+    "postcss": "^8.4.22",
+    "postcss-loader": "^7.2.4",
+    "postcss-preset-env": "^8.3.1",
+    "sass": "^1.62.0",
+    "sass-loader": "^13.2.2",
+    "terser-webpack-plugin": "^5.3.7",
     "uuid": "^9.0.0",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^4.10.0"
+    "webpack": "^5.79.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-merge": "^5.8.0"
   }
 }
