--- a/tox.ini
+++ b/tox.ini
@@ -15,11 +15,11 @@ install_command =
 
 deps =
   setuptools
-  django31: Django<3.2
-  django32: Django<3.3
-  django40: Django<4.1
-  django41: Django<4.2
-  django42: Django<4.3
+  django31: Django==3.1.*
+  django32: Django==3.2.*
+  django40: Django==4.0.*
+  django41: Django==4.1.*
+  django42: Django==4.2.*
   -r{toxinidir}/requirements.txt
 
 extras =
