allow paper-admin rc version

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,7 +39,7 @@ python_requires = >= 3.8
 include_package_data = true
 install_requires =
   Django
-  paper-admin>=6.0
+  paper-admin>=6.0rc
   jinja2-simple-tags
 packages = find_namespace:
 
